RESOLVED FIXED305272
[GStreamer][WebRTC][Rice] Fix close promise ownership
https://bugs.webkit.org/show_bug.cgi?id=305272
Summary [GStreamer][WebRTC][Rice] Fix close promise ownership
Philippe Normand
Reported 2026-01-10 09:44:55 PST
.-
Attachments
Philippe Normand
Comment 1 2026-01-10 09:47:25 PST
EWS
Comment 2 2026-01-12 03:46:19 PST
Committed 305453@main (9fbc73f44891): <https://commits.webkit.org/305453@main> Reviewed commits have been landed. Closing PR #56400 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-12 03:47:11 PST
Note You need to log in before you can comment on or make changes to this bug.