[GStreamer][WebRTC][Rice] Fix close promise ownership https://bugs.webkit.org/show_bug.cgi?id=305272

Reviewed by Xabier Rodriguez-Calvar.

The promise transfer semantics were changed in GStreamer, so we should not adopt the GstPromise in
our agent's close implementation. See also:

https://gitlab.freedesktop.org/gstreamer/gstreamer/-/commit/ae366a68cce7d29759123e6e31863d4976073c8d

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerIceAgent.cpp:
(webkitGstWebRTCIceAgentClose):

Canonical link: https://commits.webkit.org/305453@main